--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,7 @@ yarn-error.log
 /libpeerconnection.log
 testem.log
 /typings
-/environments
+src/app/environments/environments.ts
 
 
 # System files
